--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -86,7 +86,7 @@
 					<h2>Portfolio</h2>
 				</header>
 
-				<p>These are some of the projects that I have worked on when I first started to develop.</p>
+				<p>These are some of the projects that I have worked on when I first started to develop. I am excited to build more dynamic applications that will provide help to the community. Check regularly for updates.</p>
 
 				<div class="row">
 					<div class="col-4 col-12-mobile">
@@ -130,7 +130,11 @@
 
 				<p>I am a junior developer that is still developing new skills everyday. Coming from a finance background, I
 					have business perspective and approach when developing applications. My collective experience helps bridge
-					that gap between tech and business.</p>
+					that gap between tech and business.I joined the Marine Corps in 2009 and had the honor of serving and protecting this country. After four years service, I decided to study Finance at the University of South Florida. I've help people and businesses stabilize, prepare, and protect their financial future.
+
+					After providing service to military members and their families as a claims adjuster, I now have the opportunity to follow my passion as a Software Development Engineer. As an apprentice at Amazon Web Services, I am receiving the education and on the job training to become a Software Developer. I aim to continue helping people and businesses through the development of software.
+					
+					</p>
 
 			</div>
 		</section>
