--- a/public/starter-code/index.html
+++ b/public/starter-code/index.html
@@ -46,11 +46,8 @@
 
 			<!-- Social Icons -->
 			<ul class="icons">
-				<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-				<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-				<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="https://github.com/c23-repo" class="icon fa-github"><span class="label">Github</span></a></li>
+				<li><a href="crestrepo90@hotmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 			</ul>
 
 		</div>
@@ -61,12 +58,15 @@
 	<div id="main">
 
 		<!-- Intro -->
+		
 		<section id="top" class="one dark cover">
 			<div class="container">
+				<video id= "video" autoplay muted loop>
+					<source src="images/Hack_code_greenonblack_01_Videvo.mp4" type="video/mp4">
+				</video>
 
 				<header>
-					<h2 class="alt">Hello! I'm <strong>Cristian Restrepo,</strong><br />
-						software developer.</h2>
+					<h2 class="alt">Hello! I'm Cristian Restrepo.</h2>
 					<p>I am a Software Development Engineer Apprentice<br />
 						with Amazon Web Services.</p>
 				</header>
@@ -179,10 +179,10 @@
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-scrollTo/2.1.2/jquery.scrollTo.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-browser/0.1.0/jquery.browser.min.js"></script>
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
